// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Close 1`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
  </div>
</DocumentFragment>
`;

exports[`Close 2`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
  </div>
</DocumentFragment>
`;

exports[`Close 3`] = `
<DocumentFragment>
  <div>
    <div
      class="popover__trigger"
    >
      Text trigger
    </div>
    <div>
      Out click
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default use 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Default use 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Element 1`] = `
<DocumentFragment>
  <span
    class="popover__trigger"
  >
    <a
      href="#"
    >
      Text trigger
    </a>
  </span>
</DocumentFragment>
`;

exports[`Element 2`] = `
<DocumentFragment>
  <span
    class="popover__trigger"
  >
    <a
      href="#"
    >
      Text trigger
    </a>
  </span>
</DocumentFragment>
`;

exports[`Hover 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Hover 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Render function 1`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;

exports[`Render function 2`] = `
<DocumentFragment>
  <div
    class="popover__trigger"
  >
    Text trigger
  </div>
</DocumentFragment>
`;
